Issues related to styling + a few others (#1007)
* fix: cleanup search in dark mode

* fix: addl fix

* fix: tooltips in light mode

* fix: messed up jsx code snippet

* fix: improvements to deploying docs

--- a/custom.css
+++ b/custom.css
@@ -569,3 +569,7 @@ button.outline-none {
 :is(.dark .dark\:bg-white\/5) {
   background-color: rgba(255, 255, 255, 0.2);
 }
+
+html:not(.dark) .bg-tooltip {
+  background-color: #fff;
+}
